testdata/ing-rw-config_dump.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "router~172.30.144.91~istio-ingressgateway-85f6b65744-ff8fc.istio-system~istio-system.svc.cluster.local",
     "cluster": "istio-ingressgateway",
     "metadata": {
      "ISTIO_META_INSTANCE_IPS": "172.30.144.91,172.30.144.91,fe80::5066:54ff:fe8c:8a77",
      "POD_NAME": "istio-ingressgateway-85f6b65744-ff8fc",
      "istio": "sidecar",
      "CONFIG_NAMESPACE": "istio-system",
      "ISTIO_PROXY_VERSION": "1.1.0",
      "ISTIO_PROXY_SHA": "istio-proxy:a5d5a464251e940f2d59a23ec598deb0277a8dd3",
      "ROUTER_MODE": "sni-dnat",
      "ISTIO_VERSION": "1.1.0"
     },
     "locality": {},
     "build_version": "a5d5a464251e940f2d59a23ec598deb0277a8dd3/1.10.0-dev/Clean/RELEASE/BoringSSL"
    },
    "static_resources": {
     "listeners": [
      {
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15090
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "codec_type": "AUTO",
            "http_filters": {
             "name": "envoy.router"
            },
            "stat_prefix": "stats",
            "route_config": {
             "virtual_hosts": [
              {
               "routes": [
                {
                 "match": {
                  "prefix": "/stats/prometheus"
                 },
                 "route": {
                  "cluster": "prometheus_stats"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "backend"
              }
             ]
            }
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "prometheus_stats",
       "connect_timeout": "0.250s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15000
         }
        }
       ]
      },
      {
       "name": "xds-grpc",
       "type": "STRICT_DNS",
       "connect_timeout": "10s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-pilot",
          "port_value": 15010
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         },
         {
          "priority": "HIGH",
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         }
        ]
       },
       "http2_protocol_options": {},
       "upstream_connection_options": {
        "tcp_keepalive": {
         "keepalive_time": 300
        }
       }
      },
      {
       "name": "zipkin",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "zipkin",
          "port_value": 9411
         }
        }
       ]
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds-grpc"
        }
       }
      ]
     }
    },
    "tracing": {
     "http": {
      "name": "envoy.zipkin",
      "config": {
       "trace_id_128bit": "true",
       "shared_span_context": "false",
       "collector_endpoint": "/api/v1/spans",
       "collector_cluster": "zipkin"
      }
     }
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    },
    "stats_config": {
     "stats_tags": [
      {
       "tag_name": "cluster_name",
       "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
       "tag_name": "tcp_prefix",
       "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
       "tag_name": "response_code",
       "regex": "_rq(_(\\d{3}))$"
      },
      {
       "tag_name": "response_code_class",
       "regex": "_rq(_(\\dxx))$"
      },
      {
       "tag_name": "http_conn_manager_listener_prefix",
       "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "http_conn_manager_prefix",
       "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "listener_address",
       "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "mongo_prefix",
       "regex": "^mongo\\.(.+?)\\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$"
      }
     ],
     "use_all_default_tags": false,
     "stats_matcher": {
      "inclusion_list": {
       "patterns": [
        {
         "prefix": "cluster_manager"
        },
        {
         "prefix": "listener_manager"
        },
        {
         "prefix": "http_mixer_filter"
        },
        {
         "prefix": "tcp_mixer_filter"
        },
        {
         "prefix": "server"
        },
        {
         "prefix": "cluster.xds-grpc"
        }
       ]
      }
     }
    }
   },
   "last_updated": "2019-03-22T14:46:03.424Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ClustersConfigDump",
   "version_info": "2019-03-24T01:32:41Z/141",
   "static_clusters": [
    {
     "cluster": {
      "name": "prometheus_stats",
      "connect_timeout": "0.250s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15000
        }
       }
      ]
     },
     "last_updated": "2019-03-22T14:46:03.425Z"
    },
    {
     "cluster": {
      "name": "xds-grpc",
      "type": "STRICT_DNS",
      "connect_timeout": "10s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-pilot",
         "port_value": 15010
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        },
        {
         "priority": "HIGH",
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        }
       ]
      },
      "http2_protocol_options": {},
      "upstream_connection_options": {
       "tcp_keepalive": {
        "keepalive_time": 300
       }
      }
     },
     "last_updated": "2019-03-22T14:46:03.426Z"
    },
    {
     "cluster": {
      "name": "zipkin",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "zipkin",
         "port_value": 9411
        }
       }
      ]
     },
     "last_updated": "2019-03-22T14:46:03.426Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "BlackHoleCluster",
      "connect_timeout": "1s"
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "PassthroughCluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "ORIGINAL_DST_LB"
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.14267_._.jaeger-collector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.14267_._.jaeger-collector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.14268_._.jaeger-collector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.14268_._.jaeger-collector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15004_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15004_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-policy"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15004_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15004_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-telemetry"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15014_._.istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15014_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15014_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15014_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-policy"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15014_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-telemetry"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15020_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15020_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.16686_._.jaeger-query.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.16686_._.jaeger-query.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.20001_._.kiali.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.20001_._.kiali.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.3000_._.grafana.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.3000_._.grafana.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.42422_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.42422_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-telemetry"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.443_._.kubernetes-dashboard.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.kubernetes-dashboard.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.471Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.443_._.kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/api-server"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.471Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.443_._.metrics-server.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.metrics-server.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.471Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.443_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.471Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.53_._.kube-dns.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.53_._.kube-dns.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.471Z"
    },
    {
     "version_info": "2019-03-22T15:28:37Z/6",
     "cluster": {
      "name": "outbound_.8000_._.httpbin.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.8000_._.httpbin.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T15:28:37.778Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.80_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.471Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.80_._.tracing.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.tracing.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T15:28:03Z/5",
     "cluster": {
      "name": "outbound_.9080_._.details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_._.details.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T15:28:03.060Z"
    },
    {
     "version_info": "2019-03-22T15:29:03Z/9",
     "cluster": {
      "name": "outbound_.9080_._.productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_._.productpage.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T15:29:03.691Z"
    },
    {
     "version_info": "2019-03-22T15:28:49Z/7",
     "cluster": {
      "name": "outbound_.9080_._.ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_._.ratings.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T15:28:49.222Z"
    },
    {
     "version_info": "2019-03-22T18:57:55Z/29",
     "cluster": {
      "name": "outbound_.9080_._.reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_._.reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/destination-rule-reviews"
        }
       }
      }
     },
     "last_updated": "2019-03-22T18:57:55.365Z"
    },
    {
     "version_info": "2019-03-22T19:57:47Z/113",
     "cluster": {
      "name": "outbound_.9080_.v3_.reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_.v3_.reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/destination-rule-reviews"
        }
       }
      }
     },
     "last_updated": "2019-03-22T19:57:47.858Z"
    },
    {
     "version_info": "2019-03-22T19:57:47Z/113",
     "cluster": {
      "name": "outbound_.9080_.v4_.reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9080_.v4_.reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/destination-rule-reviews"
        }
       }
      }
     },
     "last_updated": "2019-03-22T19:57:47.858Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.9091_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9091_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-policy"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.9091_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9091_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-telemetry"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.9411_._.zipkin.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9411_._.zipkin.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.473Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.472Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|14267||jaeger-collector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|14267||jaeger-collector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.14267_._.jaeger-collector.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.469Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|14268||jaeger-collector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|14268||jaeger-collector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.14268_._.jaeger-collector.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.469Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-policy"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.464Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-telemetry"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.464Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.462Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.463Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15014||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-citadel-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15014_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.466Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15014||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-galley-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15014_._.istio-galley.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.455Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15014||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15014_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.464Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15014||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-policy"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.464Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|15014||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-telemetry"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.464Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|15020||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15020||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15020_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.573Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.561Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.563Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.565Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.571Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.572Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|16686||jaeger-query.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|16686||jaeger-query.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.16686_._.jaeger-query.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.468Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|20001||kiali.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|20001||kiali.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/kiali-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.20001_._.kiali.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.465Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|3000||grafana.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|3000||grafana.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.3000_._.grafana.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.456Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.559Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-telemetry"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.465Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|443||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-galley-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.454Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.558Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-sidecar-injector-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.467Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|443||kubernetes-dashboard.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||kubernetes-dashboard.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/kube-system/sa/kubernetes-dashboard"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.443_._.kubernetes-dashboard.kube-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.437Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|443||kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/api-server"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.436Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|443||metrics-server.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||metrics-server.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/kube-system/sa/metrics-server"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.443_._.metrics-server.kube-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.438Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|443||public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/kube-system/sa/ibm-ingress"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.443_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.438Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|53||kube-dns.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|53||kube-dns.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/kube-system/sa/coredns"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.53_._.kube-dns.kube-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.436Z"
    },
    {
     "version_info": "2019-03-22T15:28:37Z/6",
     "cluster": {
      "name": "outbound|8000||httpbin.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8000||httpbin.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.8000_._.httpbin.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T15:28:37.778Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-citadel-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.466Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.464Z"
    },
    {
     "version_info": "2019-03-22T14:46:29Z/10",
     "cluster": {
      "name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:29.556Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|80||public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/kube-system/sa/ibm-ingress"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.80_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.439Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|80||tracing.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||tracing.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.80_._.tracing.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.471Z"
    },
    {
     "version_info": "2019-03-22T19:57:47Z/113",
     "cluster": {
      "name": "outbound|9080|v3|reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080|v3|reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v3_.reviews.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/destination-rule-reviews"
        }
       }
      }
     },
     "last_updated": "2019-03-22T19:57:47.856Z"
    },
    {
     "version_info": "2019-03-22T19:57:47Z/113",
     "cluster": {
      "name": "outbound|9080|v4|reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080|v4|reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v4_.reviews.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/destination-rule-reviews"
        }
       }
      }
     },
     "last_updated": "2019-03-22T19:57:47.857Z"
    },
    {
     "version_info": "2019-03-22T15:28:03Z/5",
     "cluster": {
      "name": "outbound|9080||details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||details.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.details.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T15:28:03.060Z"
    },
    {
     "version_info": "2019-03-22T15:29:03Z/9",
     "cluster": {
      "name": "outbound|9080||productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||productpage.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.productpage.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T15:29:03.691Z"
    },
    {
     "version_info": "2019-03-22T15:28:49Z/7",
     "cluster": {
      "name": "outbound|9080||ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||ratings.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.ratings.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T15:28:49.221Z"
    },
    {
     "version_info": "2019-03-22T18:57:55Z/29",
     "cluster": {
      "name": "outbound|9080||reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.reviews.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/destination-rule-reviews"
        }
       }
      }
     },
     "last_updated": "2019-03-22T18:57:55.343Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|9090||prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9090||prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/prometheus"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.468Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-policy"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.464Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000,
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/istio-telemetry"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.464Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|9411||zipkin.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9411||zipkin.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/default"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9411_._.zipkin.istio-system.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.470Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "cluster": {
      "name": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9901||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-galley-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/istio-system/destination-rule/default"
        }
       }
      }
     },
     "last_updated": "2019-03-22T14:46:28.456Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ListenersConfigDump",
   "version_info": "2019-03-24T01:32:41Z/141",
   "static_listeners": [
    {
     "listener": {
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "route_config": {
            "virtual_hosts": [
             {
              "routes": [
               {
                "route": {
                 "cluster": "prometheus_stats"
                },
                "match": {
                 "prefix": "/stats/prometheus"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "backend"
             }
            ]
           },
           "codec_type": "AUTO",
           "http_filters": {
            "name": "envoy.router"
           },
           "stat_prefix": "stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-03-22T14:46:03.428Z"
    }
   ],
   "dynamic_active_listeners": [
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "listener": {
      "name": "0.0.0.0_80",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 80
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 1
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "stat_prefix": "0.0.0.0_80",
           "use_remote_address": true,
           "rds": {
            "route_config_name": "http.80",
            "config_source": {
             "ads": {}
            }
           },
           "set_current_client_cert_details": {
            "uri": true,
            "subject": true,
            "dns": true
           },
           "stream_idle_timeout": "0s",
           "forward_client_cert_details": "SANITIZE_SET",
           "access_log": [],
           "server_name": "istio-envoy",
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "max_retry_wait": "1s",
                "base_retry_wait": "0.080s",
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-85f6b65744-ff8fc.istio-system"
                },
                "source.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-85f6b65744-ff8fc.istio-system"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "istio-system"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-85f6b65744-ff8fc.istio-system"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ]
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-03-22T14:46:28.477Z"
    },
    {
     "version_info": "2019-03-22T14:46:20Z/9",
     "listener": {
      "name": "0.0.0.0_443",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filter_chain_match": {
         "server_names": [
          "uk.bookinfo.com"
         ]
        },
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2",
           "http/1.1"
          ]
         },
         "require_client_certificate": false
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "access_log": [],
           "server_name": "istio-envoy",
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE",
                "max_retry_wait": "1s",
                "base_retry_wait": "0.080s"
               },
               "report_cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
               "check_cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "istio-system"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-85f6b65744-ff8fc.istio-system"
                },
                "source.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-85f6b65744-ff8fc.istio-system"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-85f6b65744-ff8fc.istio-system"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 1
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "https.443.https"
           },
           "use_remote_address": true,
           "stat_prefix": "0.0.0.0_443",
           "set_current_client_cert_details": {
            "uri": true,
            "subject": true,
            "dns": true
           },
           "stream_idle_timeout": "0s",
           "forward_client_cert_details": "SANITIZE_SET"
          }
         }
        ]
       }
      ],
      "listener_filters": [
       {
        "name": "envoy.listener.tls_inspector"
       }
      ]
     },
     "last_updated": "2019-03-22T14:46:28.476Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "virtual_hosts": [
       {
        "name": "backend",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/stats/prometheus"
          },
          "route": {
           "cluster": "prometheus_stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-03-22T14:46:03.428Z"
    }
   ],
   "dynamic_route_configs": [
    {
     "version_info": "2019-03-24T01:32:41Z/141",
     "route_config": {
      "name": "http.80",
      "virtual_hosts": [
       {
        "name": "*:80",
        "domains": [
         "*",
         "*:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/rutabaga"
          },
          "route": {
           "cluster": "outbound|9080||productpage.default.svc.cluster.local",
           "prefix_rewrite": "/productpage",
           "host_rewrite": "",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "3",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/rutabaga*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         },
         {
          "match": {
           "path": "/productpage"
          },
          "route": {
           "cluster": "outbound|9080||productpage.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "3",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/productpage"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-03-24T01:32:41.894Z"
    },
    {
     "version_info": "2019-03-24T01:32:41Z/141",
     "route_config": {
      "name": "https.443.https",
      "virtual_hosts": [
       {
        "name": "*:443",
        "domains": [
         "*",
         "*:443"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/rutabaga"
          },
          "route": {
           "cluster": "outbound|9080||productpage.default.svc.cluster.local",
           "prefix_rewrite": "/productpage",
           "host_rewrite": "",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "3",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/rutabaga*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              }
             }
            }
           }
          }
         },
         {
          "match": {
           "path": "/productpage"
          },
          "route": {
           "cluster": "outbound|9080||productpage.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "3",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/productpage"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-03-24T01:32:41.894Z"
    }
   ]
  }
 ]
}
